--- a/README.org
+++ b/README.org
@@ -6,6 +6,8 @@
 
 keywords: [[https://srfi.schemers.org/?keywords=comparison][Comparison]]
 
+library-name: comparators
+
 This repository hosts [[https://srfi.schemers.org/srfi-128/][SRFI 128]]: Comparators (reduced), a [[https://srfi.schemers.org/][Scheme Request for Implementation]].
 
 This SRFI is in /final/ status.
