--- a/README.org
+++ b/README.org
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2016 - 2021 Arthur A. Gleckler <srfi@speechcode.com>
+#
+# SPDX-License-Identifier: MIT
+
 * SRFI 128: Comparators (reduced)
 
 ** by John Cowan
